Add OpenID Connect (Keycloak) authentication support
